<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.7</version>
        <relativePath/>
    </parent>
    <groupId>de.tum.cit.aet</groupId>
    <artifactId>hephaestus-server-parent</artifactId>
    <version>0.0.0-development</version>
    <packaging>pom</packaging>
    <name>Hephaestus server reactor</name>
    <modules>
        <module>generated-clients</module>
        <module>application</module>
    </modules>
    <properties>
        <java.version>21</java.version>
        <spring-boot.version>4.0.7</spring-boot.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.build.outputTimestamp>2026-01-01T00:00:00Z</project.build.outputTimestamp>
        <graphql-codegen.version>5.10.0</graphql-codegen.version>
        <openapi-generator.version>7.19.0</openapi-generator.version>
        <spotless-maven-plugin.version>3.10.1</spotless-maven-plugin.version>
        <palantir-java-format.version>2.97.0</palantir-java-format.version>
    </properties>
</project>
